--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
     <script src="/Scripts/scenes/end.js"></script>
     <script src="/Scripts/scenes/play.js"></script>
     <script src="/Scripts/scenes/start.js"></script>
+    <script src="/Scripts/scenes/menu.js"></script>
+    <script src="/Scripts/scenes/info.js"></script>
+    <script src="/Scripts/scenes/playLevel2.js"></script>
 
     <!-- Core Script -->
     <script src="/Scripts/core/game.js"></script>
