Added Bullet class

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <script src="/Scripts/objects/background.js"></script>
     <script src="/Scripts/objects/lifeline.js"></script>
     <script src="/Scripts/objects/enemy.js"></script>
-   <!-- <script src="/Scripts/objects/bullet.ts"></script> -->
+   <script src="/Scripts/objects/bullet.ts"></script> 
 
     <!-- More Manager Scripts -->
     <script src="/Scripts/managers/scoreboard.js"></script>
