--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script src="/Scripts/math/Vec2.js"></script>
 
     <!-- Manager Scripts -->
+    <script src="/Scripts/managers/bullet.js"></script>
     <script src="/Scripts/managers/game.js"></script>
 
     <!-- Game Objects -->
@@ -43,7 +44,7 @@
     <script src="/Scripts/objects/background.js"></script>
     <script src="/Scripts/objects/lifeline.js"></script>
     <script src="/Scripts/objects/enemy.js"></script>
-   <script src="/Scripts/objects/bullet.ts"></script> 
+   <script src="/Scripts/objects/bullet.js"></script> 
 
     <!-- More Manager Scripts -->
     <script src="/Scripts/managers/scoreboard.js"></script>
