Added working bullet

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <script src="/Scripts/math/Vec2.js"></script>
 
     <!-- Manager Scripts -->
+    
+    <script src="/Scripts/managers/keyboard.js"></script>
     <script src="/Scripts/managers/bullet.js"></script>
     <script src="/Scripts/managers/game.js"></script>
 
@@ -38,13 +40,14 @@
     <script src="/Scripts/objects/gameobject.js"></script>
     <script src="/Scripts/objects/label.js"></script>
     <script src="/Scripts/objects/button.js"></script>
+    <script src="/Scripts/objects/bullet.js"></script> 
+
     <script src="/Scripts/objects/scene.js"></script>
 
     <script src="/Scripts/objects/player.js"></script>
     <script src="/Scripts/objects/background.js"></script>
     <script src="/Scripts/objects/lifeline.js"></script>
     <script src="/Scripts/objects/enemy.js"></script>
-   <script src="/Scripts/objects/bullet.js"></script> 
 
     <!-- More Manager Scripts -->
     <script src="/Scripts/managers/scoreboard.js"></script>
